apps/grafana-shared/envs/gke-prod-01/httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-shared
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  parentRefs:
  - name: shared-gateway-int
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames: ["grafana.jksoam.in"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana-service
      port: 3000
      kind: Service
      group: ''
      weight: 1
